--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --hero-hover-btn-color: #188ce8;
   --border-header-color: #ececec;
   --border-card-color: #eeeeee;
+  --hero-gradient-color: rgba(47, 48, 58, 0.4);
 }
 
 /* Reset */
@@ -37,23 +38,27 @@ button {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 /* ---------UTILITY--------- */
 
 body {
   font-family: 'Roboto', sans-serif;
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 .container {
   width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 
   /* outline: 1px solid tomato; */
 }
@@ -114,6 +119,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 26px;
   line-height: 1.19;
+
   color: var(--accent-color);
 }
 
@@ -149,6 +155,7 @@ body {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
   color: var(--title-color);
 }
 .nav-link:hover,
@@ -183,6 +190,7 @@ body {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
   color: var(--primary-color);
 }
 .header-contact:hover,
@@ -194,13 +202,29 @@ body {
 
 /* HERO */
 
+.hero-overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-color: var(--primary-background-color);
+  background-image: linear-gradient(
+      to right,
+      var(--hero-gradient-color),
+      var(--hero-gradient-color)
+    ),
+    url('../images/hero_bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
 
   text-align: center;
-
-  background-color: var(--primary-background-color);
 }
 
 .hero-title {
@@ -219,7 +243,10 @@ body {
 }
 
 .hero-button {
-  padding: 10px 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
 
   font-weight: 700;
   font-size: 16px;
