--- a/css/styles.css
+++ b/css/styles.css
@@ -182,9 +182,6 @@ body {
   margin-left: auto;
 }
 
-.header-contact-item {
-}
-
 .header-contact-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -223,11 +220,13 @@ body {
 
 /* HERO */
 
-.hero-overlay {
+.hero {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
+
+  text-align: center;
 
   background-color: var(--primary-background-color);
   background-image: linear-gradient(
@@ -241,11 +240,9 @@ body {
   background-size: cover;
 }
 
-.hero {
+.hero .section {
   padding-top: 200px;
   padding-bottom: 200px;
-
-  text-align: center;
 }
 
 .hero-title {
@@ -308,15 +305,11 @@ body {
   margin-bottom: 30px;
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 120px;
 
   background-color: var(--secondary-background-color);
   border-radius: 4px;
-}
-
-.features-icon {
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .features-title {
@@ -467,6 +460,8 @@ body {
 }
 
 .clients-item {
+  width: 170px;
+  height: 92px;
 }
 
 .clients-item:not(:last-child) {
@@ -474,14 +469,13 @@ body {
 }
 
 .clients-link {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-right: 32px;
-  padding-left: 32px;
-
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .client-icon {
@@ -560,6 +554,24 @@ body {
   margin-bottom: 30px;
 }
 
+.card-link {
+  display: block;
+}
+
+.card-link:link,
+.card-link:visited,
+.card-link:active,
+.card-link:hover,
+.card-link:focus {
+  color: inherit;
+}
+
+.card-link:hover,
+.card-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .card-info {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -583,20 +595,6 @@ body {
 .card-subtitle {
   font-size: 16px;
   line-height: 1.88;
-}
-
-.card-link:link,
-.card-link:visited,
-.card-link:active,
-.card-link:hover,
-.card-link:focus {
-  color: inherit;
-}
-
-.card:hover,
-.card:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* ---------FOOTER--------- */
@@ -650,15 +648,14 @@ body {
 
 /* Соцсети футер */
 
-.footer-soc-title {
+.footer-soc-text {
   margin-bottom: 20px;
 
-  font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--secondary-color);
 }
 
 .footer-soc-links .soc-link {
